--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Happy Pet</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="images/Vector.svg" type="image/x-icon">
@@ -67,7 +66,7 @@
                         Почему выбирают именно наших животных?
                     </h1>
                     <ul class="why_list">
-                        <li class="why_logo"><img class="why_logo-img" src="images/why/1.png">
+                        <li class="why_logo"><img class="why_logo-img1" src="images/why/1.png">
                         <li class="why_logo"><img class="why_logo-img" src="images/why/2.png">
                         <li class="why_logo"><img class="why_logo-img" src="images/why/3.png">
                         </li>
@@ -175,9 +174,7 @@
                             Читать дальше
                         </a>
                     </div>
-                </div>
-                <div class="about_image">
-                        <img src="images/us.png">
+                    <img class="about_image"src="images/us.png">
                 </div>
             </section>
         </main>
