--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="hero_content">
                             <div class="hero_text">
                                 <h1 class="hero_title">
-                                    Твой новый друг с доставкой на дом
+                                    Твой новый друг с<br> доставкой на дом
                                 </h1>
                                 <p class="hero_desc">
                                     Онлайн-магазин домашних животных, удобное решение когда лень выходить из дома
