--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
                         <a class="header_button" href="/"><img src="images/иконка.svg">Корзинка
                         </a>
                     </nav>
+                    <div class="burger_container">
+                        <img class="burger_logo" src="images/Vector.svg">
+                        <img src="images/Happy Pet.svg">
+                        <nav class="burger_menu">
+                            <ul class="burger_menu-list">
+                                <li class="burger_list-items">
+                                    <a class="burger_list-item active"href="/">Главная</a>
+                                </li>
+                                <li class="burger_list-items">
+                                    <a class="burger_list-item"href="/">Друзья</a>
+                                </li>
+                                <li class="burger_list-items">
+                                    <a class="burger_list-item"href="/">О нас</a>
+                                </li>
+                                <li class="burger_list-items">
+                                    <a class="burger_list-item"href="/">Контакты</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <button class="burger">
+                            <img class="лапка" src="images/лапка.png">
+                        </button>
+                    </div>
                 </div>
             </header>
             <main>
@@ -179,7 +202,7 @@
             </section>
         </main>
 
-
+        <script src="script.js"></script>
     </body>
 
     </html>
