--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </nav>
                     <div class="burger_container">
                         <img class="burger_logo" src="images/Vector.svg">
-                        <img src="images/Happy Pet.svg">
+                        <img class="name_logo" src="images/Happy Pet.svg">
                         <nav class="burger_menu">
                             <ul class="burger_menu-list">
                                 <li class="burger_list-items">
