--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                         <img src="images/Happy Pet.svg">
                         <ul class="header_list">
                             <li class="header_list-item">
-                                <a class="header_list-link active"href="/">Главная</a>
+                                <a class="header_list-link active"href="#hero">Главная</a>
                             </li>
                             <li class="header_list-item">
-                                <a class="header_list-link"href="/">Друзья</a>
+                                <a class="header_list-link"href="#catalog">Друзья</a>
                             </li>
                             <li class="header_list-item">
-                                <a class="header_list-link"href="/">О нас</a>
+                                <a class="header_list-link"href="#about">О нас</a>
                             </li>
                             <li class="header_list-item">
                                 <a class="header_list-link"href="/">Контакты</a>
@@ -41,13 +41,13 @@
                         <nav class="burger_menu">
                             <ul class="burger_menu-list">
                                 <li class="burger_list-items">
-                                    <a class="burger_list-item active"href="/">Главная</a>
+                                    <a class="burger_list-item active"href="#hero">Главная</a>
                                 </li>
                                 <li class="burger_list-items">
-                                    <a class="burger_list-item"href="/">Друзья</a>
+                                    <a class="burger_list-item"href="#catalog">Друзья</a>
                                 </li>
                                 <li class="burger_list-items">
-                                    <a class="burger_list-item"href="/">О нас</a>
+                                    <a class="burger_list-item"href="#about">О нас</a>
                                 </li>
                                 <li class="burger_list-items">
                                     <a class="burger_list-item"href="/">Контакты</a>
@@ -61,7 +61,7 @@
                 </div>
             </header>
             <main>
-                <section class="hero">
+                <section class="hero" id="hero">
                     <div class="hero_container">
                         <div class="hero_content">
                             <div class="hero_text">
@@ -97,7 +97,7 @@
                 </div>
 
             </section>
-            <section class="catalog">
+            <section class="catalog" id="catalog">
                 <div class="catalog_container">
                     <h1 class="catalog_text">
                         Каталог питомцев
@@ -142,7 +142,7 @@
                 </div>
 
             </section>
-            <section class="galery">
+            <section class="galery" id="galery">
                 <div class="galery_container">
                     <h2 class="galery_title">
                         Мы любим поиграть
@@ -184,7 +184,7 @@
                     </div>
                 </div>
             </section>
-            <section class="about">
+            <section class="about" id="about">
                 <div class="about_container">
                     <div class="about_content">
                         <h2 class="about_title">
