--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 </p>
                             </div>
                             <div class="hero_buttons">
-                                <a class="hero_button" href="/">Посмотреть друга</a>
+                                <a class="hero_button" href="#catalog">Посмотреть друга</a>
                                 <a class="hero_scroll" href="#why"><img class="hero_scroll-image" src="images/стрелка.png">
                                 </a>
                             </div>
