--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <img src="images/Happy Pet.svg">
                         <ul class="header_list">
                             <li class="header_list-item">
-                                <a class="header_list-link active"href="#hero">Главная</a>
+                                <a class="header_list-link"href="#hero">Главная</a>
                             </li>
                             <li class="header_list-item">
                                 <a class="header_list-link"href="#catalog">Друзья</a>
@@ -47,16 +47,16 @@
             <nav class="burger_menu">
                 <ul class="burger_menu-list">
                     <li class="burger_list-items">
-                        <a class="burger_list-item active"href="#hero">Главная</a>
+                        <a class="burger_list-item1"href="#hero">Главная</a>
                     </li>
                     <li class="burger_list-items">
-                        <a class="burger_list-item"href="#catalog">Друзья</a>
+                        <a class="burger_list-item2"href="#catalog">Друзья</a>
                     </li>
                     <li class="burger_list-items">
-                        <a class="burger_list-item"href="#about">О нас</a>
+                        <a class="burger_list-item3"href="#about">О нас</a>
                     </li>
                     <li class="burger_list-items">
-                        <a class="burger_list-item"href="/">Контакты</a>
+                        <a class="burger_list-item4"href="/">Контакты</a>
                     </li>
                 </ul>
             </nav>
