--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <p class="about_desc">
                             Мы предлагаем широкий выбор домашних животных разных пород и возрастов, гарантируем высокое качество и полную поддержку на каждом этапе покупки. Мы также предоставляем услугу доставки, чтобы ваш новый друг прибыл к вам в лучшем состоянии и в срок. Найдите своего нового лучшего друга уже сегодня!    
                         </p>
-                        <a class="about_link" href="/">
+                        <a class="about_link" href="about_info.html" _blank>
                             Читать дальше
                         </a>
                     </div>
