--- a/about_info.html
+++ b/about_info.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <page-hero class="hero2">
+        <div class="page_1">
             <header class="header">
                 <div  class="header_container">
                     <nav class="header_nav">
@@ -60,6 +60,21 @@
                     </li>
                 </ul>
             </nav>
-        </page-hero>
+            <main>
+                <section class="hero1">
+                    <div class="hero_container1">
+                        <div class="content1">  
+                            <h1 class="hero_title1">
+                                Небольшая история <br> о нашем магазине
+                            </h1>
+                            <a class="hero_btn1" href="/">
+                                Вниз
+                            </a>
+                        </div> 
+                        <img class="hero_img1" src="images/about-us_image/hero.png">
+                    </div>
+                </section>
+            </main>
+        </div>
             <script src="script.js"></script>
     </body>
